プルリクエスト出したい

--- a/git.html
+++ b/git.html
@@ -11,6 +11,8 @@
     <h1>2020年8月5日</h1>
     <p>githubのてすとｔっとととととと</p>
     <p>addしてコミットしていくテスト！</p>
+    <p>ブランチをキッテプルリクエスト</p>
     <p>お邪魔します</p>
+    <p>ブランチをキッテプルリクエスト</p>
 </body>
 </html>
